Updated Alumni PhD 2014 Batch

--- a/_data/phd-alumni.yaml
+++ b/_data/phd-alumni.yaml
@@ -908,7 +908,7 @@
   year: 2014
   title: A posteriori error analysis of discontinuous Galerkin methods for elliptic variational inequalities
   advisor: T. Gudi
-  present: IIT Gandhinagar
+  present: IIT Delhi
 
 - name: Divakaran D.
   year: 2014
