--- a/.github/workflows/postdoc-alumni-update.yml
+++ b/.github/workflows/postdoc-alumni-update.yml
@@ -4,6 +4,8 @@ on: workflow_dispatch
 
 jobs:
   update:
+    runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v1
     - name: Set up JDK 1.11
