--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -51,7 +51,7 @@
 - name: Ved Datar
   user-id: vvdatar
   position: Assistant Professor
-  research-areas: Geometric analysis and Complex geometry.
+  research-areas: Geometric analysis and Complex geometry
   phd: Rutgers
   phone-ext: 3326
   office: X05
