Manjunath's name expanded

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -210,7 +210,7 @@ aug2021:
     instructor: Srijan Sarkar (DST-INSPIRE)
   - name: Fourier Analysis
     code: MA 326
-    instructor: Manjunath
+    instructor: Manjunath Krishnapur
   - name: Introduction to Several Complex Variables 
     code: MA 328
     instructor: E. K. Narayanan
