Updated Int PhD Students

--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -513,3 +513,51 @@
   user-id: arnabpalp
   image: true
 
+- name: Sushobhan Das 
+  year-of-joining: 2021
+  programme: Integrated PhD
+  user-id: 
+  image: true
+
+- name: Yash Chauhan
+  year-of-joining: 2021
+  programme: Integrated PhD
+  user-id: 
+  image: true
+
+- name: Indranil Bhattacharyya
+  year-of-joining: 2021
+  programme: Integrated PhD
+  user-id: 
+  image: true
+
+- name: Arghan Dutta
+  year-of-joining: 2021
+  programme: Integrated PhD
+  user-id:
+  image: true
+
+- name: Agniv Bandyopadhyay
+  year-of-joining: 2021
+  programme: Integrated PhD
+  user-id:
+  image: true
+
+- name: Arghyadeep Chatterjee
+  year-of-joining: 2021
+  programme: Integrated PhD
+  user-id:
+  image: true
+
+- name: Abhishek Malviya
+  year-of-joining: 2021
+  programme: Integrated PhD
+  user-id:
+  image: true
+
+
+
+
+
+
+
