Updated PhD Students

--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -555,8 +555,29 @@
   user-id:
   image: true
 
+- name: Supravat Sarkar
+  year-of-joining: 2021
+  programme: PhD
+  user-id:
+  image: true
 
+- name: Lalit Thuwal
+  year-of-joining: 2021
+  programme: PhD
+  user-id:
+  image: true
 
+- name: Chaithra P
+  year-of-joining: 2021
+  programme: PhD
+  user-id:
+  image: true
+
+- name: Mahure Rohan Suresh
+  year-of-joining: 2021
+  programme: PhD
+  user-id:
+  image: true
 
 
 
