--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -161,7 +161,7 @@
   research-area: Linear algebra, Graph theory
 
 - name: Biltu Dan
-  phd: ISI Kolkata
+  phd: ISI, Kolkata
   user-id: biltudan 
   position: Raman PDF
   image: true
