--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -214,7 +214,7 @@ aug2021:
   - name: Introduction to Several Complex Variables 
     code: MA 328
     instructor: E. K. Narayanan
-  - name: Remannian Geometry
+  - name: Riemannian Geometry
     code: MA 333
     instructor: Ved Datar
   - name: Topics in Analytic Number Theory
