manjunath course page

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -212,6 +212,7 @@ aug2021:
   - name: Fourier Analysis
     code: MA 326
     instructor: Manjunath Krishnapur
+    webpage: http://math.iisc.ac.in/~manju/FA/fourieranalysis2021.html
   - name: Introduction to Several Complex Variables 
     code: MA 328
     instructor: E. K. Narayanan
