--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -3902,6 +3902,17 @@
   mrclass: '92D40 (58F13 58F40)'
   volume: '7'
 
+- author: 'Khare, Apoorva'
+  fjournal: 'S&eacute;minaire Lotharingien de Combinatoire'
+  pages: 'Art. 29, 12'
+  year: '2018'
+  mrreviewer: 'G&ouml;tz Pfeiffer'
+  title: 'Generalized nil-Coxeter algebras'
+  journal: 'S&eacute;m. Lothar. Combin.'
+  mrnumber: '3940604'
+  mrclass: '20F55 (16S99 17B37 20C08)'
+  volume: '80B'
+
 - number: '7'
   author: 'M&uuml;ller, Gerd and Patil, D. P.'
   fjournal: 'Communications in Algebra'
@@ -11522,20 +11533,6 @@
   mrclass: '34A45'
   volume: '8'
 
-- number: '11'
-  author: 'Ravindran, R. and Sundar, S.'
-  fjournal: 'Computers \& Mathematics with Applications. An International Journal'
-  url: 'http://dx.doi.org/10.1016/S0898-1221(97)00085-0'
-  pages: '21-33'
-  year: '1997'
-  title: 'Mode locking for an externally excited droplet'
-  doi: '10.1016/S0898-1221(97)00085-0'
-  issn: '0898-1221'
-  journal: 'Comput. Math. Appl.'
-  mrnumber: '1458958'
-  mrclass: '76D99 (34C15)'
-  volume: '33'
-
 - number: '3'
   author: 'De Maio, U. and Nandakumaran, A. K.'
   fjournal: 'Asymptotic Analysis'
@@ -11813,6 +11810,30 @@
   mrnumber: '3365786'
   mrclass: '11F11 (11F12)'
   volume: '27'
+
+- number: '11'
+  author: 'Ravindran, R. and Sundar, S.'
+  fjournal: 'Computers \& Mathematics with Applications. An International Journal'
+  url: 'http://dx.doi.org/10.1016/S0898-1221(97)00085-0'
+  pages: '21-33'
+  year: '1997'
+  title: 'Mode locking for an externally excited droplet'
+  doi: '10.1016/S0898-1221(97)00085-0'
+  issn: '0898-1221'
+  journal: 'Comput. Math. Appl.'
+  mrnumber: '1458958'
+  mrclass: '76D99 (34C15)'
+  volume: '33'
+
+- author: 'Khare, Apoorva and Tao, Terence'
+  fjournal: 'S&eacute;minaire Lotharingien de Combinatoire'
+  pages: 'Art. 14, 12'
+  year: '2018'
+  title: 'Schur polynomials, entrywise positivity preservers, and weak majorization'
+  journal: 'S&eacute;m. Lothar. Combin.'
+  mrnumber: '3940589'
+  mrclass: '05E05'
+  volume: '80B'
 
 - number: '5'
   author: 'Mandal, B. N. and Chakrabarti, A.'
